# relude

./: .gitattributes  .gitignore  CLAUDE.md  Developers.md  LICENSE  Makefile  Overview.md  PUBLISHING.md  README.md  Status.md  _sidebar.md  bisect.exclude  bsconfig.json  default.nix  dune  dune-project  esy.json  generate_rei_files  index.html  jest.setup.js  jestGlobalTeardown.js  odoc.css  package-lock.json  package.json  relude.opam
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
__tests__/: Aff_test.re  Array_test.re  AsyncData_test.re  Bool_test.re  Eff_test.re  FS.re  Float_test.re  Function_test.re  Int_test.re  ListF_test.re  List_test.re  NonEmpty_test.re  Option_test.re  Relude_Aff_test.re  Relude_Array_test.re  Relude_AsyncData_test.re  Relude_AsyncResult_test.re  Relude_Bool_test.re  Relude_ContT_test.re  Relude_Debounce_test.re  Relude_Decimal_test.re  Relude_Eff_test.re  Relude_Eq_test.re  Relude_Float_test.re  Relude_Free_Applicative_test.re  Relude_Free_Monad_test.re  Relude_Function_test.re  Relude_HList_test.re  Relude_HMap_test.re  Relude_IO_test.re  Relude_Identity_test.re  Relude_Int_test.re  Relude_Ior_test.re  Relude_Js_Console_test.re  Relude_Js_Json_test.re  Relude_ListF_test.re  Relude_ListZipper_test.re  Relude_List_Submodules_test.re  Relude_List_test.re  Relude_Map_test.re  (+24 more)
__tests__/extensions/: Relude_Extensions_Enum_test.re  Relude_Extensions_Eq_test.re  Relude_Extensions_Ord_test.re  dune
__tests__/js/: Relude_Js_Console_test.re  Relude_Js_Exn_test.re  Relude_Js_Json_test.re  Relude_Js_Promise_test.re  dune
__tests__/output/__tests__/: Relude_Array_test.js  Relude_AsyncData_test.js  Relude_AsyncResult_test.js  Relude_Bool_test.js  Relude_ContT_test.js  Relude_Debounce_test.js  Relude_Decimal_test.js  Relude_Eq_test.js  Relude_Float_test.js  Relude_Free_Applicative_test.js  Relude_Free_Monad_test.js  Relude_Function_test.js  Relude_HList_test.js  Relude_HMap_test.js  Relude_IO_test.js  Relude_Identity_test.js  Relude_Int_test.js  Relude_Ior_test.js  Relude_ListZipper_test.js  Relude_List_test.js  Relude_Map_test.js  Relude_NonEmpty_test.js  Relude_OptionT_test.js  Relude_Option_test.js  Relude_Ord_test.js  Relude_RIO_test.js  Relude_ReaderT_test.js  Relude_ResultT_test.js  Relude_Result_test.js  Relude_Set_test.js  Relude_StateT_test.js  Relude_String_test.js  Relude_Throttle_test.js  Relude_Timer_test.js  Relude_TreeZipper_test.js  Relude_Tree_test.js  Relude_Tuple_test.js  Relude_Unit_test.js  Relude_Validation_test.js  Relude_WriterT_test.js
__tests__/output/__tests__/extensions/: Relude_Extensions_Enum_test.js  Relude_Extensions_Eq_test.js  Relude_Extensions_Ord_test.js
__tests__/output/__tests__/js/: Relude_Js_Exn_test.js  Relude_Js_Json_test.js  Relude_Js_Promise_test.js
__tests__/output/__tests__/testUtils/: FS.js
__tests__/testUtils/: FS.re  Fs.re
api/: index.html
api/Relude_Array/: index.html
api/Relude_ArrayZipper/: index.html
api/Relude_Array_Base/: index.html
api/Relude_Array_Instances/: index.html
api/Relude_Array_Specializations/: index.html
api/Relude_AsyncData/: index.html
api/Relude_AsyncResult/: index.html
api/Relude_Bool/: index.html
api/Relude_ContT/: index.html
api/Relude_Debounce/: index.html
api/Relude_Decimal/: index.html
api/Relude_Eq/: index.html
api/Relude_Extensions/: index.html
api/Relude_Extensions_Align/: index.html
api/Relude_Extensions_Alt/: index.html
api/Relude_Extensions_Alternative/: index.html
api/Relude_Extensions_Applicative/: index.html
api/Relude_Extensions_Apply/: index.html
api/Relude_Extensions_Bifoldable/: index.html
api/Relude_Extensions_Bifunctor/: index.html
api/Relude_Extensions_Bitraversable/: index.html
api/Relude_Extensions_Bounded/: index.html
api/Relude_Extensions_BoundedEnum/: index.html
api/Relude_Extensions_Comonad/: index.html
api/Relude_Extensions_Contravariant/: index.html
api/Relude_Extensions_Enum/: index.html
api/Relude_Extensions_Eq/: index.html
api/Relude_Extensions_Extend/: index.html
api/Relude_Extensions_Foldable/: index.html
api/Relude_Extensions_Functor/: index.html
api/Relude_Extensions_Monad/: index.html
api/Relude_Extensions_MonadError/: index.html
api/Relude_Extensions_MonadThrow/: index.html
coverage/: clover.xml  coverage-final.json
docs/: Conventions.md  Developers.md  FAQ.md  Installation.md  Overview.md  README.md  _coverpage.md  _sidebar.md  index.html  search.html  searchables.json  searchables.json.index.js
esy.lock/: index.json
native/: Relude.re  Relude_Array.re  Relude_AsyncResult.re  Relude_ContT.re  Relude_Decimal.re  Relude_Eq.re  Relude_Float.re  Relude_Free.re  Relude_Free_Applicative.re  Relude_Free_Monad.re  Relude_Function.re  Relude_Globals.re  Relude_HList.re  Relude_HMap.re  Relude_IO.re  Relude_Int.re  Relude_Ior.re  Relude_ListZipper.re  Relude_Map.re  Relude_NonEmpty.re  Relude_OptionT.re  Relude_Ord.re  Relude_Ordering.re  Relude_RIO.re  Relude_RWST.re  Relude_ReaderT.re  Relude_Result.re  Relude_Sequence.re  Relude_SequenceZipper.re  Relude_Set.re  Relude_String.re  Relude_StringMap.re  Relude_Tree.re  Relude_Tuple.re  Relude_Tuple3.re  Relude_Tuple4.re  Relude_Tuple5.re  Relude_Unsafe.re  dune
scripts/: prepack.js
src/: Aff.re  Array.re  AsyncData.re  Bool.re  Demo.re  Eff.re  Function.re  Int.re  Interface.re  List.re  ListF.re  MonadAff.re  MonadEff.re  NonEmpty.re  Option.re  Ordering.re  Relude.re  Relude.rei  Relude_Aff.re  Relude_Array.re  Relude_Array.rei  Relude_ArrayZipper.re  Relude_AsyncData.re  Relude_AsyncData.rei  Relude_AsyncResult.re  Relude_AsyncResult.rei  Relude_Bool.re  Relude_Bool.rei  Relude_ContT.re  Relude_Debounce.re  Relude_Decimal.re  Relude_Decimal.rei  Relude_Eff.re  Relude_Eq.re  Relude_Extensions.re  Relude_Extensions.rei  Relude_Float.re  Relude_Float.rei  Relude_Free.re  Relude_Free_Applicative.re  (+84 more)
test/: dune  test_array.re  test_runner.re
tools/: generate_rei_files  remove_rei_files
typeclasses/: Apply.md  Bifunctor.md  Functor.md  Ord.md  ReadMore.md  Ring.md  Show.md  Traversable.md
(+2685 files in other folders)
