(lang dune 3.8)


 ; (action-plugin 0.1)
(using melange 0.1)

(name relude)

(license "MIT")

(maintainers <your_name>)

(authors <your_name>)

(homepage https://github.com/reazen/relude)

(bug_reports https://github.com/reazen/relude/issues)

(package
 (name relude)
 (synopsis "Relude")
 (description "Alternative standard library (prelude) for ReasonML"))

 ; (tags
 ;  ("category theory" "abstract algebra" "algebra" "cats"))
 ; (depends
 ;  (ocaml (>= 4.14))
 ;  (bisect_ppx (and (>= 2.1.0)))
 ;  (odoc (and (>= 1.5.0) :with-doc))
 ;  (dune (>= 2.0.1))))
