opam-version: "2.0"
synopsis: "Alternative standard library (prelude) for ReasonML"
description: """
Relude is a ReasonML/OCaml standard library replacement (prelude) written in ReasonML, 
targeting compilation to JavaScript via the Melange compiler. It provides typeclass-style 
abstractions inspired by Haskell, PureScript, Elm, and Scala cats/scalaz ecosystems.
"""
maintainer: [
  "Michael Martin"
  "Andy White"
  "John Haley"
]
authors: [
  "Michael Martin"
  "Andy White"
  "John Haley"
]
license: "MIT"
tags: ["ReasonML" "Melange" "functional programming" "prelude" "standard library"]
homepage: "https://github.com/reazen/relude"
doc: "https://reazen.github.io/relude"
bug-reports: "https://github.com/reazen/relude/issues"
depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "3.12"}
  "melange" {>= "5.1.0"}
  "mel-bastet"
  "alcotest" {dev}
  "qcheck" {dev}
  "bisect_ppx" {dev}
  "odoc" {>= "1.5.0" & with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "--debug-dependency-path"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
pin-depends: [
  [ "mel-bastet.dev" "git+https://github.com/johnhaley81/mel-bastet.git" ]
]
